syntax="proto3";
package anytype;
option go_package = "pb";

import "models.proto";
import "changes.proto";


message BlockShow {
    Model.Block block = 1;
}

message BlockUpdate {
    BlockChanges changes = 1;
}

message BlockCreate {
    Model.Block block = 1;
}
